--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-    <meta name="theme-color" content="#0f172a" />
+    <meta name="theme-color" content="#f8fafc" />
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Mèo Finance">
     <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/3135/3135715.png">
     <title>Me & Mèo Finance</title>
@@ -24,8 +23,8 @@
       .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
       
       /* Safe area utilities */
-      .pb-safe { padding-bottom: env(safe-area-inset-bottom); }
-      .pt-safe { padding-top: env(safe-area-inset-top); }
+      .pb-safe { padding-bottom: calc(env(safe-area-inset-bottom) + 0.5rem); }
+      .pt-safe { padding-top: calc(env(safe-area-inset-top) + 1rem); }
       .mb-safe { margin-bottom: env(safe-area-inset-bottom); }
     </style>
     <script type="importmap">
